game-gate/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: game-gate-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: game-gate.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: game-gate
          servicePort: 8007
